Добавить вывод самых популярных фильмов по жанру и годам